--- a/src/styles/account.css
+++ b/src/styles/account.css
@@ -22,7 +22,7 @@
 }
 .userAccountBoxHeader {
   color: #ffffff74;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: x-large;
 
   display: flex;
