--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,13 +1,65 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Carousel Elements */
+.banner {
+  width: 100%;
+  height: 250vh;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
+.banner .slider {
+  position: absolute;
+  width: 10rem;
+  height: 10rem;
+  top: 5%;
+  left: calc(50% - 5rem);
+  transform-style: preserve-3d;
+  transform: perspective(1000px);
+  animation: autoRun 110s linear infinite; 
+  &:hover {
+    animation-play-state: paused;
+    cursor: pointer;
+    
+  }
+}
+@keyframes autoRun{
+    from{transform: perspective(1000px) rotateY(0deg);
+    }to{
+        transform: perspective(1000px) rotateY(-360deg)
+    }
+}
+
+.banner .slider .item {
+  box-shadow: 10px 10px 10;
+  position: absolute;
+  inset: 0 0 0 0;
+  transform: rotateY(
+      calc((var(--position) - 1) * (360 / var(--quantity)) * 1deg)
+    )
+    translateZ(300px);
+}
+
+.banner .slider .item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  transition: box-shadow 0.6s ease-in-out;
+  &:hover {
+    box-shadow: 0 0 20px rgba(243, 243, 243, 0.9);
+    
+  }
+}
+
+.selected img {
+  outline: 3px solid #b29eee;
+  transform: scale(1/1)
+}
+
+.carouselContainer {
+  backdrop-filter: blur(10px);
+  width: 50rem;
+  height: 25rem;
+  background-color: rgb(24, 24, 24);
+}
+
