--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -1,7 +1,3 @@
-.avatarGrid {
-  width: "60px";
-  height: "60px";
-  border-radius: "50%";
-  border: "1px solid gray";
-  margin: "5px";
+.submitButton {
+  margin-top: 8rem;
 }
